RESOLVED FIXED193340
Cleanup possible WK*Copy/Create leaks in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=193340
Summary Cleanup possible WK*Copy/Create leaks in WebKitTestRunner
Joseph Pecoraro
Reported 2019-01-10 14:44:59 PST
Cleanup possible WK*Copy/Create leaks in WebKitTestRunner Searching for lines with WK.*?Create / WK.*?Copy that don't use WKRetainPtr or improperly use it.
Attachments
[PATCH] Proposed Fix (5.90 KB, patch)
2019-01-10 14:46 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2019-01-10 14:46:43 PST
Created attachment 358838 [details] [PATCH] Proposed Fix
David Kilzer (:ddkilzer)
Comment 2 2019-01-11 12:54:06 PST
Comment on attachment 358838 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 3 2019-01-11 13:04:15 PST
Comment on attachment 358838 [details] [PATCH] Proposed Fix Clearing flags on attachment: 358838 Committed r239871: <https://trac.webkit.org/changeset/239871>
WebKit Commit Bot
Comment 4 2019-01-11 13:04:17 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-01-11 13:05:28 PST
Darin Adler
Comment 6 2019-01-14 06:51:08 PST
Comment on attachment 358838 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=358838&action=review > Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:434 > + WKRetainPtr<WKStringRef> totalPrevalentResourcesKey(AdoptWK, WKStringCreateWithUTF8CString("TotalPrevalentResources")); > + WKRetainPtr<WKStringRef> totalPrevalentResourcesWithUserInteractionKey(AdoptWK, WKStringCreateWithUTF8CString("TotalPrevalentResourcesWithUserInteraction")); > + WKRetainPtr<WKStringRef> top3SubframeUnderTopFrameOriginsKey(AdoptWK, WKStringCreateWithUTF8CString("Top3SubframeUnderTopFrameOrigins")); Please use the adoptWK function, not the special AdoptWK constructor, in new code. We want to get rid of those special constructors some day.
Note You need to log in before you can comment on or make changes to this bug.