Cleanup possible WK*Copy/Create leaks in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=193340

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2019-01-11
Reviewed by David Kilzer.

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
Pull the strings out into a WKRetainPtr.

* WebKitTestRunner/WebNotificationProvider.cpp:
(WTR::WebNotificationProvider::closeWebNotification):
Adopt the created value into the WKRetainPtr.

* WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::generateWhitelist):
Immediately adopt a created value to avoid potential mistakes.

Canonical link: https://commits.webkit.org/207855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239871 268f45cc-cd09-0410-ab3c-d52691b4dbfc